# promptslim

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  GITHUB_OPTIMIZATION.md  LICENSE  PROMOTION_ARTICLE.md  PROMOTION_ARTICLE_V2.md  README.md  README_zh.md  docker-compose.yml  pyproject.toml  ruff.toml
.github/workflows/: publish.yml  python-test.yml
admin-server/: Dockerfile  pom.xml
admin-server/src/main/java/com/agentorchestrator/: Application.java
admin-server/src/main/java/com/agentorchestrator/config/: RestConfig.java
admin-server/src/main/java/com/agentorchestrator/controller/: AgentController.java  GlobalExceptionHandler.java  HealthController.java  ToolController.java
admin-server/src/main/java/com/agentorchestrator/model/: Agent.java  AgentStatus.java  Task.java  TaskStatus.java
admin-server/src/main/java/com/agentorchestrator/service/: AgentService.java
admin-server/src/main/java/com/jing04/orchestrator/controller/: GlobalExceptionHandler.java
admin-server/src/main/resources/: application.yml
admin-server/src/main/resources/static/: index.html
agent-core/: Dockerfile  config.py  main.py  pyproject.toml  requirements.txt
agent-core/agents/: __init__.py  base.py  llm_agent.py
agent-core/memory/: __init__.py  rag.py
agent-core/orchestration/: __init__.py  workflow.py
agent-core/tests/: conftest.py  test_agent.py  test_tools.py  test_workflow.py
agent-core/tools/: __init__.py  builtin.py  file_reader.py  registry.py  sql_query.py  web_search.py
agent-core/utils/: __init__.py  logger.py  retry.py
dashboard/: app.py
docs/: API.md  ARCHITECTURE.md  DEPLOY.md  PLAN2-CONTRIBUTION-GUIDE.md
promptslim/: __init__.py  __main__.py  cache.py  cli.py  compressor.py  patch.py  redundancy.py  reporter.py  tokenizer.py
scripts/: generate_demo_gif.py
tests/: test_prompslim.py  test_promptslim.py
