[project]
name = "promptslim"
version = "0.1.0"
description = "AI 提示词瘦身工具 — 从源头减少 Token 消耗"
requires-python = ">=3.10"
dependencies = [
    "tiktoken>=0.7.0",
    "httpx>=0.27.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0.0", "pytest-asyncio>=0.23.0"]

[project.scripts]
promptslim = "promptslim.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends._legacy:_Backend"
