[project]
name = "promptslim"
version = "0.4.1"
description = "AI Prompt Slimming Toolkit — reduce token consumption at the source before every API call. 40+ Chinese & English redundancy patterns, code protection, Anthropic Prompt Caching analysis."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "JING", email = "3573851322@qq.com"},
]
keywords = ["llm", "token", "prompt", "optimization", "cost-saving", "prompt-engineering", "openai", "claude", "deepseek"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "tiktoken>=0.7.0",
    "httpx>=0.27.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0.0", "pytest-asyncio>=0.23.0", "openai>=1.0.0"]

[project.urls]
Homepage = "https://github.com/JING04-PRODUCER/promptslim"
Documentation = "https://github.com/JING04-PRODUCER/promptslim#readme"
Repository = "https://github.com/JING04-PRODUCER/promptslim.git"
Issues = "https://github.com/JING04-PRODUCER/promptslim/issues"

[project.scripts]
promptslim = "promptslim.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["promptslim*"]
